Verbesserte Docker-Konfiguration und Start-Skripte